# MavlinkTelemServer

./: Dockerfile  README.md  tzdata.sh
example/: drone.py  goto.py  miscClient.py  test.py
server/: CMakeLists.txt
server/misc/: server.py
server/src/: main.cpp
